# handycpp

./: .gitignore  CMakeLists.txt  Handy.cpp  Handy.hpp  HandyBase.hpp  HandyCompat.hpp  HandyConsole.hpp  HandyCpp.vcxitems  HandyCpp.vcxitems.filters  HandyDeque.hpp  HandyEncoding.hpp  HandyExtended.hpp  HandyFile.hpp  HandyGuid.hpp  HandyHash.hpp  HandyLoader.hpp  HandyMMFile.hpp  HandyMath.hpp  HandyMemory.hpp  HandyPIMPL.hpp  HandyRange.hpp  HandyResult.hpp  HandySerDe.hpp  HandyString.hpp  HandySystemInfo.hpp  HandyThreadUtils.hpp  HandyTryGet.hpp  HandyUtils.hpp  Hints.natvis  LICENSE  README.md
Docs/: HandyArgs - Templatized C++ Command Line Parser Manual (v1.4).html  HandyMMFile.md
Extended/: HandyArgs.hpp  HandyCalamity.hpp  HandyPacket.hpp  HandySHA1.hpp  HandySmallVector.hpp
Extended/GSL/include/gsl/: gsl_byte  gsl_util  span
Math/: Extended.hpp  HandyMathTest.sln  HandyMathTest.vcxproj  HandyMathTest.vcxproj.filters  README.md
Math/Core/: Base.hpp  BitContinuum.hpp  Conversions.hpp  Matrix3.hpp  Matrix4.hpp  Popcount.hpp  RGB888.hpp  RGBA8888.hpp  Vector2.hpp  Vector2d.hpp  Vector2i.hpp  Vector3.hpp  Vector3d.hpp  Vector3i.hpp  Vector4.hpp  Vector4d.hpp  Vector4i.hpp
Math/Extended/: AABB2.hpp  AABB2d.hpp  AABB2i.hpp  AABB3.hpp  Functions.hpp  IProjection.hpp  Line2.hpp  LineClipping.hpp  LineSimplification.hpp  Maps.hpp  OrthoFrame3.hpp  PerspectiveProjection.hpp  Xform3.hpp
Math/Tools/: UN_RESHUFFLE.cpp
Math/ext/: sse_mathfun.h
Math/include/: Core.hpp
Math/include/Core/: Base.hpp  BitContinuum.hpp  Conversions.hpp  Matrix3.hpp  Matrix4.hpp  RGB888.hpp  RGBA8888.hpp  Vector2.hpp  Vector2d.hpp  Vector2i.hpp  Vector3.hpp  Vector3d.hpp  Vector3i.hpp  Vector4.hpp  Vector4d.hpp  Vector4i.hpp
Math/include/Extended/: AABB2.hpp  AABB2d.hpp  AABB2i.hpp  AABB3.hpp  Line2.hpp  LineSimplification.hpp  Maps.hpp  OrthoFrame3.hpp  OrthoProjection.hpp  Xform3.hpp
Math/test/: Tests.hpp  test_Vector4.cpp
Tests/: Ulps.cpp
Tests/DynamicLibraryLoaderTest/: Tester.sln  Tester.vcxproj  Tester.vcxproj.filters  main.cpp
Tests/DynamicLibraryLoaderTest/TestLib/: TestLib.cpp  TestLib.hpp  TestLib.vcxproj  TestLib.vcxproj.filters
Tests/MathTests/: Benchmarks.cpp  TestsInternal.hpp
isrc/: Common.hpp  HandyConsole.cpp  HandyGuid.cpp  HandyLoader.cpp  HandyMMFile.cpp  HandyThreadUtils.cpp  SystemInfo.cpp  SystemInfo.hpp  cfgpath.h  stb_image.cpp
src/: Common.hpp  HandyConsole.cpp  HandyLoader.cpp  HandyMMFile.cpp  HandySystemInfo.cpp  HandyThreadUtils.cpp  stb_image.cpp
